--- a/Test_app/app/src/main/res/layout/activity_main.xml
+++ b/Test_app/app/src/main/res/layout/activity_main.xml
@@ -122,4 +122,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
+    <Button
+        android:id="@+id/switch2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="146dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="61dp"
+        android:onClick="Side2"
+        android:text="AdTest"
+        app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button8" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
