--- a/Test_app/app/src/main/res/layout/activity_settings.xml
+++ b/Test_app/app/src/main/res/layout/activity_settings.xml
@@ -22,14 +22,11 @@
 
     <com.yieldlove.adIntegration.YieldloveAdView
         android:id="@+id/AdContainer"
-        android:layout_width="217dp"
-        android:layout_height="130dp"
-        android:layout_marginStart="71dp"
-        android:layout_marginEnd="105dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="268dp"
         android:layout_marginBottom="288dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
