--- a/Test_app/app/src/main/res/layout/activity_side.xml
+++ b/Test_app/app/src/main/res/layout/activity_side.xml
@@ -8,6 +8,19 @@
     tools:context=".SideActivity">
 
     <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginEnd="158dp"
+        android:layout_marginBottom="526dp"
+        android:onClick="InterAdd"
+        android:text="Show interstitial"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/backS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
