--- a/Test_app/app/src/main/res/layout/activity_side2.xml
+++ b/Test_app/app/src/main/res/layout/activity_side2.xml
@@ -75,16 +75,18 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/Result"
-        android:layout_width="85dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="168dp"
-        android:layout_marginBottom="292dp"
+        android:id="@+id/ResultA"
+        android:layout_width="122dp"
+        android:layout_height="59dp"
+        android:layout_marginStart="118dp"
+        android:layout_marginTop="129dp"
+        android:layout_marginEnd="153dp"
         android:text="Result"
-        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.604" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
